tests/NormalTests/paczka1/fuzzy1/50563225.err
Error in line 4: enfS S539 15,9
Error in line 2: A772 S284 9,8
Error in line 9: kY83PYch S539 26,5
Error in line 35: xWqBPa S836 15,7
